<!--
  ~  Copyright 2021 James Andreas
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License
  -->

<resources>

    <string name="app_name">Search View</string>
    <string name="app_title">Search View with Bottom Navigation</string>
    <string name="title_home">FastScroll</string>
    <string name="title_search">Search</string>
    <string name="title_settings">Settings</string>

    <string name="search_recent_header">Recent searches:</string>
    <string name="search_hint">Search Fruits</string>
    <string name="search_no_results_found">No results found</string>
    <string name="search_empty_message">Have a fruitful search experience here.</string>
    <string name="history_empty_title">No recent search entries</string>
    <string name="menu_clear_all_history">Clear history</string>
    <string name="button_clear_search_string">Click here to clear the search string</string>

    <string name="prefs_theme">Theme</string>
    <string name="prefs_theme_key">theme_key</string>

    <string name="prefs_theme_default_value">dark</string>
    <string name="prefs_theme_dialog_title">Choose theme</string>
    <string name="prefs_theme_summary">CURRENT SETTING GOES HERE</string>
    <string name="prefs_theme_title">Choose theme</string>


    <array name="theme_array_entries">
        <item>Dark</item>
        <item>Light</item>
        <item>Set by Battery Saver</item>
        <item>System Default</item>
    </array>

    <array name="theme_array_entry_values">
        <item>dark</item>
        <item>light</item>
        <item>battery</item>
        <item>system</item>
    </array>

</resources>