<!--
  ~  Copyright 2021 James Andreas
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/prefs_theme">

        <!--Dark / Light / Set by Battery Saver / Follow System-->
        <ListPreference
            android:key="@string/prefs_theme_key"
            android:defaultValue="@string/prefs_theme_default_value"
            android:dialogTitle="@string/prefs_theme_dialog_title"
            android:entries="@array/theme_array_entries"
            android:entryValues="@array/theme_array_entry_values"
            android:title="@string/prefs_theme_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <Preference
        android:key="app_version"
        android:title="Version"

        android:clickable="false"
        android:selectable="false"
        >
    </Preference>


</PreferenceScreen>

